Revise HTML for improved resident focus and clarity
Updated the title and description meta tags for better clarity. Modified various text elements to emphasize a resident-focused approach and improve communication.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Martel Legacy | Real Estate Investment & Rentals</title>
+  <title>Martel Legacy | Rentals That Feel Like Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Martel Legacy is a real estate investment and rental company dedicated to providing people a nice place to live without price gouging, while building long-term value with like-minded investors." />
+  <meta name="description" content="Martel Legacy is a real estate investment and rental company dedicated to providing people a nice place to live without price gouging." />
 
-  <!-- Open Graph (nice previews when you share the link) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Martel Legacy" />
-  <meta property="og:description" content="Ethical rentals & long-term real estate investments." />
-  <!-- You can change this to your actual hosted image later -->
+  <meta property="og:description" content="Nice places to live, fair deals for everyone." />
   <meta property="og:image" content="assets/ty-martel.jpg" />
   <meta property="og:type" content="website" />
 
-  <!-- Google Font (optional, can change) -->
+  <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -23,7 +22,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a href="#top" class="brand">
+      <a href="index.html" class="brand">
         <img src="assets/martel-legacy-logo.png" alt="Martel Legacy logo" class="brand-logo" />
         <span class="brand-text">
           <span class="brand-name">Martel Legacy</span>
@@ -32,32 +31,32 @@
       </a>
       <nav class="nav">
         <a href="#residents" class="nav-link">Residents</a>
-        <a href="#investors" class="nav-link">Investors</a>
         <a href="#about" class="nav-link">About</a>
+        <a href="investors.html" class="nav-link">Investors</a>
         <a href="#contact" class="nav-link nav-link-cta">Contact</a>
       </nav>
     </div>
   </header>
 
   <main id="top">
-    <!-- HERO -->
+    <!-- HERO - RESIDENT FOCUSED -->
     <section class="hero">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h1>Nice places to live. Fair deals for everyone.</h1>
+          <h1>A rental that actually feels like home.</h1>
           <p class="hero-subtitle">
-            Martel Legacy is a real estate investment and rental company dedicated to providing people
-            a nice place to live without price gouging — built on long-term ownership, quality
-            renovations, and respect for residents.
+            Martel Legacy is a real estate investment and rental company dedicated to providing
+            people a nice place to live without price gouging — clean, cared-for units with a
+            landlord you can actually talk to.
           </p>
           <div class="hero-cta">
-            <a href="#contact" class="btn btn-primary">Talk to Martel Legacy</a>
-            <a href="#investors" class="btn btn-outline">View investment approach</a>
+            <a href="#contact" class="btn btn-primary">Looking for a place to live?</a>
+            <a href="#residents" class="btn btn-outline">See what you can expect</a>
           </div>
           <div class="hero-pill-strip">
-            <span class="pill">Ethical rental strategy</span>
-            <span class="pill">Long-term buy & hold</span>
             <span class="pill">Resident-first mindset</span>
+            <span class="pill">Fair, honest approach</span>
+            <span class="pill">Local ownership</span>
           </div>
         </div>
         <div class="hero-photo-card">
@@ -68,8 +67,8 @@
             <p class="hero-name">Ty Martel</p>
             <p class="hero-role">Founder, Martel Legacy</p>
             <p class="hero-blurb">
-              Hands-on investor focused on clean, safe rentals and predictable returns —
-              without squeezing tenants.
+              Hands-on owner focused on safe, comfortable rentals and real conversations —
+              not treating tenants like numbers on a spreadsheet.
             </p>
           </div>
         </div>
@@ -82,95 +81,33 @@
         <div>
           <h2>For Residents</h2>
           <p class="section-lead">
-            A rental should feel like home, not like a constant battle with your landlord.
+            Home is where you relax, recharge, and live your life — it shouldn’t feel like a constant fight with your landlord.
           </p>
           <ul class="checklist">
-            <li>Clear, upfront communication</li>
-            <li>Well-maintained, clean units</li>
-            <li>Fair, market-informed rents — not price gouging</li>
-            <li>Respect for your time, privacy, and family</li>
-            <li>Local ownership, not a distant call centre</li>
+            <li>Fair, market-informed rents — no price gouging</li>
+            <li>Well-maintained, clean, and safe units</li>
+            <li>Respectful, straightforward communication</li>
+            <li>Local ownership, not a call-centre</li>
+            <li>Long-term mindset, not quick flips</li>
           </ul>
           <p>
-            Martel Legacy focuses on long-term relationships with residents, which means
-            taking care of the property and the people in it. When units are improved,
-            the goal is to add comfort and stability, not just squeeze out the highest possible dollar.
+            Martel Legacy focuses on properties that real people actually want to live in: practical layouts,
+            solid neighborhoods, and the basics done properly. When improvements are made, they’re done to
+            make the space more comfortable and reliable — not just to squeeze every last dollar.
           </p>
         </div>
         <div class="card card-quiet">
-          <h3>What you can expect</h3>
+          <h3>What you can expect from us</h3>
           <ul class="simple-list">
-            <li>Simple, clear lease agreements</li>
+            <li>Clear leases without confusing language</li>
             <li>Reasonable expectations on both sides</li>
-            <li>Prompt attention to maintenance issues</li>
-            <li>Units that are safe, functional, and welcoming</li>
+            <li>Attention to repairs and maintenance</li>
+            <li>Units that feel cared for, not neglected</li>
           </ul>
           <p class="card-note">
-            If you’re interested in living in a Martel Legacy property, reach out with a short
-            introduction and what you’re looking for.
+            If you’d like to be considered for a current or future vacancy in a Martel Legacy property,
+            send a short introduction with who you are, what you’re looking for, and your ideal move-in timeframe.
           </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- INVESTORS (subtle pitch) -->
-    <section id="investors" class="section section-dark">
-      <div class="container">
-        <div class="section-heading">
-          <h2>For Investment Partners</h2>
-          <p class="section-subtitle">
-            Steady, boring, and very intentional. That’s the point.
-          </p>
-        </div>
-
-        <div class="grid-3">
-          <article class="card card-outline">
-            <h3>Real assets, real people</h3>
-            <p>
-              The focus is on residential properties where demand is durable and
-              residents actually want to stay. Each property is chosen with the
-              basics in mind: location, numbers that make sense, and room to improve.
-            </p>
-          </article>
-
-          <article class="card card-outline">
-            <h3>Conservative, long-term strategy</h3>
-            <p>
-              Martel Legacy favours long-term buy & hold and responsible leverage.
-              The goal isn’t flashy swings — it’s predictable cash flow, carefully
-              managed renovations, and sustainable growth over time.
-            </p>
-          </article>
-
-          <article class="card card-outline">
-            <h3>Resident-first, return-conscious</h3>
-            <p>
-              By treating residents fairly and focusing on livability, turnover stays
-              lower and buildings stay healthier. That’s good for the people living there
-              and, quietly, good for investor outcomes too.
-            </p>
-          </article>
-        </div>
-
-        <div class="strategy-strip">
-          <div class="strategy-item">
-            <h4>What Martel Legacy looks for</h4>
-            <ul class="simple-list">
-              <li>Solid working-class neighbourhoods</li>
-              <li>Undervalued or under-managed buildings</li>
-              <li>Clear plan to increase comfort & efficiency</li>
-              <li>Numbers that work without extreme assumptions</li>
-            </ul>
-          </div>
-          <div class="strategy-item">
-            <h4>How partnerships typically work</h4>
-            <p>
-              Each deal is structured on its own merits, with clear roles and aligned
-              incentives. If you’re an investor who cares about both returns and how
-              those returns are created, a conversation might be worth having.
-            </p>
-            <a href="#contact" class="link-soft">Start a quiet conversation &rarr;</a>
-          </div>
         </div>
       </div>
     </section>
@@ -181,26 +118,29 @@
         <div>
           <h2>About Martel Legacy</h2>
           <p class="section-lead">
-            Built on the idea that you can do good business without treating housing like a squeeze play.
+            A simple idea: you can run a rental business that’s fair to residents and still make solid, long-term returns.
           </p>
           <p>
-            Martel Legacy grew out of hands-on work in construction, refurbishing, and custom
-            automotive projects — the kind of work where details, craftsmanship, and
-            doing what you promised actually matter.
+            Martel Legacy grew out of hands-on work in construction, renovations, and custom projects —
+            the kind of work where details, craftsmanship, and showing up when you say you will actually matter.
           </p>
           <p>
-            That same mindset drives the real estate side: buy properties that make sense,
-            fix what’s broken properly, treat residents fairly, and let time do its job.
+            That approach carries over into real estate: buy properties that make sense, fix what’s broken properly,
+            and treat people with respect. No games, no surprise fees, and no pressure tactics.
           </p>
         </div>
         <div class="card">
           <h3>What matters here</h3>
           <ul class="checklist">
-            <li>Respect for residents</li>
-            <li>Transparency with partners</li>
-            <li>Quality over shortcuts</li>
+            <li>Respect for residents and their families</li>
+            <li>Safe, functional, and welcoming units</li>
+            <li>Transparency and follow-through</li>
             <li>Stability over speculation</li>
           </ul>
+          <p class="card-note">
+            If you’re an investor who shares these values, there is a dedicated page with more detail on how partnerships work.
+            You can find it under the “Investors” link in the navigation.
+          </p>
         </div>
       </div>
     </section>
@@ -209,10 +149,10 @@
     <section id="contact" class="section section-contact">
       <div class="container contact-inner">
         <div>
-          <h2>Let’s talk</h2>
+          <h2>Get in touch</h2>
           <p class="section-lead">
-            Whether you’re looking for a place to live or you’re an investor who
-            shares these values, reach out and start the conversation.
+            Whether you’re looking for a place to live now or want to be notified about future openings,
+            reach out and start the conversation.
           </p>
         </div>
         <div class="contact-card">
@@ -227,8 +167,8 @@
           </a>
 
           <p class="contact-note">
-            A short message about who you are and what you’re interested in
-            (residency or investment) makes it easier to respond thoughtfully.
+            A short message with your name, who will be living in the unit, what you’re looking for,
+            and your ideal move-in date helps make the first conversation more useful for both of us.
           </p>
         </div>
       </div>
@@ -245,7 +185,6 @@
   </footer>
 
   <script>
-    // Simple script to keep the footer year up to date
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
