Refactor hero section to image-first layout

--- a/index.html
+++ b/index.html
@@ -39,41 +39,47 @@
   </header>
 
   <main id="top">
-    <!-- HERO - RESIDENT FOCUSED -->
-    <section class="hero">
-      <div class="container hero-inner">
-        <div class="hero-copy">
-          <h1>A rental that actually feels like home.</h1>
-          <p class="hero-subtitle">
-            Martel Legacy is a real estate investment and rental company dedicated to providing
-            people a nice place to live without price gouging — clean, cared-for units with a
-            landlord you can actually talk to.
-          </p>
-          <div class="hero-cta">
-            <a href="#contact" class="btn btn-primary">Looking for a place to live?</a>
-            <a href="#residents" class="btn btn-outline">See what you can expect</a>
-          </div>
-          <div class="hero-pill-strip">
-            <span class="pill">Resident-first mindset</span>
-            <span class="pill">Fair, honest approach</span>
-            <span class="pill">Local ownership</span>
-          </div>
-        </div>
-        <div class="hero-photo-card">
-          <div class="hero-photo-frame">
-            <img src="assets/ty-martel.jpg" alt="Photo of Ty Martel, founder of Martel Legacy" class="hero-photo" />
-          </div>
-          <div class="hero-photo-text">
-            <p class="hero-name">Ty Martel</p>
-            <p class="hero-role">Founder, Martel Legacy</p>
-            <p class="hero-blurb">
-              Hands-on owner focused on safe, comfortable rentals and real conversations —
-              not treating tenants like numbers on a spreadsheet.
-            </p>
-          </div>
-        </div>
+   <!-- HERO - IMAGE-FIRST LAYOUT -->
+<section class="hero hero-image-dominant">
+  <div class="container hero-inner">
+
+    <!-- Large Centered Image -->
+    <div class="hero-photo-card hero-photo-large">
+      <div class="hero-photo-frame">
+        <img src="assets/ty-martel.jpg" alt="Photo of Ty Martel, founder of Martel Legacy" class="hero-photo" />
       </div>
-    </section>
+      <div class="hero-photo-text hero-photo-text-centered">
+        <p class="hero-name">Ty Martel</p>
+        <p class="hero-role">Founder, Martel Legacy</p>
+        <p class="hero-blurb">
+          Hands-on owner focused on safe, comfortable rentals and real conversations —
+          not treating tenants like numbers on a spreadsheet.
+        </p>
+      </div>
+    </div>
+
+    <!-- Text Beneath Image -->
+    <div class="hero-copy hero-copy-centered">
+      <h1>A rental that actually feels like home.</h1>
+      <p class="hero-subtitle">
+        Martel Legacy is a real estate investment and rental company dedicated to providing
+        people a nice place to live without price gouging — clean, cared-for units with a
+        landlord you can actually talk to.
+      </p>
+
+      <div class="hero-cta hero-cta-centered">
+        <a href="#contact" class="btn btn-primary">Looking for a place to live?</a>
+        <a href="#residents" class="btn btn-outline">See what you can expect</a>
+      </div>
+
+      <div class="hero-pill-strip hero-pill-centered">
+        <span class="pill">Resident-first mindset</span>
+        <span class="pill">Fair, honest approach</span>
+        <span class="pill">Local ownership</span>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- RESIDENTS -->
     <section id="residents" class="section section-light">
