--- a/index.html
+++ b/index.html
@@ -42,21 +42,25 @@
    <!-- HERO - IMAGE-FIRST LAYOUT -->
 <section class="hero hero-image-dominant">
   <div class="container hero-inner">
-
-    <!-- Large Centered Image -->
     <div class="hero-photo-card hero-photo-large">
-      <div class="hero-photo-frame">
-        <img src="assets/ty-martel.jpg" alt="Photo of Ty Martel, founder of Martel Legacy" class="hero-photo" />
+      ...
+    </div>
+
+    <div class="hero-copy hero-copy-centered">
+      ...
+      <div class="hero-cta hero-cta-centered">
+        ...
       </div>
-      <div class="hero-photo-text hero-photo-text-centered">
-        <p class="hero-name">Ty Martel</p>
-        <p class="hero-role">Founder, Martel Legacy</p>
-        <p class="hero-blurb">
-          Hands-on owner focused on safe, comfortable rentals and real conversations —
-          not treating tenants like numbers on a spreadsheet.
-        </p>
+
+      <div class="hero-pill-strip hero-pill-centered">
+        <span class="pill">Resident-first mindset</span>
+        <span class="pill">Fair, honest approach</span>
+        <span class="pill">Local ownership</span>
       </div>
     </div>
+  </div>
+</section>
+
 
     <!-- Text Beneath Image -->
     <div class="hero-copy hero-copy-centered">
